# functional-compiler

./: .gitignore  LICENSE  README.md  functional-compiler.cabal
app/: Main.hs  example
src/: Grammar.y  Lib.hs  Tokens.x  grammar_specification.ebnf
test/: GrammarSpec.hs  LexerSpec.hs  LibSpec.hs  MainSpec.hs
